# sdk-nrf-bm

./: .checkpatch.conf  .gitattributes  .gitignore  .gitlint_local  .ruff.toml  CMakeLists.txt  CODEOWNERS  Jenkinsfile  Kconfig.nrf-lite  Kconfig.nrf_bm  LICENSE  README.md  west.yml
applications/softdevice/: CMakeLists.txt  Kconfig  README.rst
cmake/bootconf/: CMakeLists.txt
doc/: CMakeLists.txt  requirements.txt  versions.json
doc/_doxygen/: aliases.doxyfile  doxygen-awesome.css
doc/_scripts/: gen_memory_layouts.py
doc/_static/html/: index.html
doc/_utils/: redirects.py  utils.py
doc/_zoomin/: ncs.lite.api.custom.properties  ncs.lite.api.tags.yml  ncs.lite.custom.properties  ncs.lite.tags.yml  nrf-bm.apis.custom.properties  nrf-bm.apis.tags.yml  nrf-bm.custom.properties  nrf-bm.tags.yml  s115.apis.custom.properties  s115.apis.tags.yml  s115_nrf54l15.apis.custom.properties  s115_nrf54l15.apis.tags.yml  s115_nrf54lm20.apis.custom.properties  s115_nrf54lm20.apis.tags.yml  s115_nrf54ls05.apis.custom.properties  s115_nrf54ls05.apis.tags.yml  s115_nrf54lv10.apis.custom.properties  s115_nrf54lv10.apis.tags.yml  s145.apis.custom.properties  s145.apis.tags.yml  s145_nrf54l15.apis.custom.properties  s145_nrf54l15.apis.tags.yml  s145_nrf54lm20.apis.custom.properties  s145_nrf54lm20.apis.tags.yml  s145_nrf54ls05.apis.custom.properties  s145_nrf54ls05.apis.tags.yml  s145_nrf54lv10.apis.custom.properties  s145_nrf54lv10.apis.tags.yml  sd.custom.properties  sd.tags.yml
doc/kconfig/: conf.py
doc/ncs-bm/: README.md  conf.py  index.rst  install_ncs_bm.rst  install_ncsl.rst  links.txt  release_notes_0.1.0.rst  samples.rst
doc/ncs-bm/includes/: softdevice_flash.txt
doc/ncs-lite/: README.md  build_docs.py  conf.py  index.rst  install_ncsl.rst  links.txt  ncs-lite.doxyfile.in  release_notes_0.1.0.rst  samples.rst  shortcuts.txt
doc/ncs-lite/doxygen/: mainpage.dox
doc/ncs-lite/includes/: program_sample.txt
doc/nrf-bm/: conf.py  drivers.rst  gen_docs.py  index.rst  install_nrf_bm.rst  links.txt  mainpage.dox  nrf-bm.doxyfile.in  release_notes.rst  release_notes_0.1.0.rst  release_notes_0.7.0.rst  requirements.txt  s115_docs.rst  samples.rst  shortcuts.txt  softdevice_docs.rst  subsys.rst  ug_bootloader_keys.rst  ug_dfu.rst
doc/nrf-bm/api/: api.rst  nrf-bm_api.rst  s115_api.rst
doc/nrf-bm/ble_services/: ble_bas.rst  ble_cgms.rst  ble_dis.rst  ble_hids.rst  ble_hrs.rst  ble_lbs.rst  ble_mcumgr.rst  ble_nus.rst  index.rst
doc/nrf-bm/boards/: memory_layout.rst
doc/nrf-bm/doxygen/: mainpage.dox  (+4 more)
doc/nrfbm/: README.md  conf.py  index.rst  install_nrf_bm.rst  links.txt  nrfbm.doxyfile.in  release_notes.rst  s115_docs.rst  shortcuts.txt  substitutions.txt
doc/s115/: ble_api.dox  mainpage.dox  s115.doxyfile  s115.doxyfile.in  s115_9.0.0-1.prototype_release-notes.rst  s115_9.0.0-2.prototype_release-notes.rst  s115_9.0.0-3.prototype_migration-document.main.rst  s115_9.0.0-3.prototype_migration-document.rst  s115_9.0.0-3.prototype_release-notes.main.rst  s115_9.0.0-3.prototype_release-notes.rst  s115_mainpage.dox
doc/s115_nrf54l15/: mainpage.dox  s115_nrf54l15.doxyfile.in
doc/s115_nrf54lm20/: mainpage.dox  s115_nrf54lm20.doxyfile.in
doc/s115_nrf54ls05/: mainpage.dox  s115_nrf54ls05.doxyfile.in
doc/s115_nrf54lv10/: mainpage.dox  s115_nrf54lv10.doxyfile.in
doc/s140/: s140.doxyfile  s140_mainpage.dox  s140_msc.dox  s140_softdevice.dox
doc/s145/: mainpage.dox  s145.doxyfile.in
doc/s145_nrf54l15/: mainpage.dox  s145_nrf54l15.doxyfile.in
doc/s145_nrf54lm20/: mainpage.dox  s145_nrf54lm20.doxyfile.in
doc/s145_nrf54ls05/: mainpage.dox  s145_nrf54ls05.doxyfile.in
doc/s145_nrf54lv10/: mainpage.dox  s145_nrf54lv10.doxyfile.in
doc/softdevice/: softdevice.doxyfile.in
lib/: CMakeLists.txt  Kconfig
lib/ble_adv/: CMakeLists.txt  Kconfig  ble_adv.c  ble_adv_data.c
lib/ble_conn_params/: CMakeLists.txt  Kconfig  att_mtu.c  conn_param.c  data_length.c  event.c  phy_mode.c
lib/ble_conn_state/: Kconfig  ble_conn_state.c
lib/ble_db_discovery/: Kconfig  ble_db_discovery.c
lib/ble_gq/: Kconfig  gatt_queue.c
lib/ble_qwr/: Kconfig  ble_qwr.c
lib/ble_racp/: CMakeLists.txt  Kconfig  ble_racp.c
lib/ble_radio_notification/: Kconfig  ble_radio_notification.c
lib/bluetooth/: CMakeLists.txt  Kconfig
lib/bm_buttons/: CMakeLists.txt  Kconfig  bm_buttons.c
lib/bm_fifo/: CMakeLists.txt  Kconfig  bm_fifo.c
lib/bm_gpiote/: CMakeLists.txt  Kconfig  gpiote.c
lib/bm_queue/: CMakeLists.txt  Kconfig  bm_queue.c
lib/bm_scheduler/: CMakeLists.txt  Kconfig  bm_scheduler.c
lib/bm_spi_mngr/: CMakeLists.txt  Kconfig  bm_spi_mngr.c
lib/bm_storage/: bm_storage.c
lib/bm_timer/: CMakeLists.txt  Kconfig  bm_timer.c
lib/bm_util/: CMakeLists.txt  Kconfig  bm_util.c
lib/bm_zms/: Kconfig  bm_zms.c
lib/boot_banner/: CMakeLists.txt  Kconfig  banner.c
lib/conn_state/: Kconfig  ble_conn_state.c
lib/event_scheduler/: CMakeLists.txt  Kconfig  event_scheduler.c
lib/lite_buttons/: CMakeLists.txt  Kconfig  lite_buttons.c
lib/lite_timer/: CMakeLists.txt  Kconfig  lite_timer.c
lib/nrf_ble_qwr/: CMakeLists.txt  Kconfig  nrf_ble_qwr.c
lib/peer_manager/: CMakeLists.txt  Kconfig  peer_manager.c
lib/sensorsim/: CMakeLists.txt  Kconfig  sensorsim.c
lib/zephyr_queue/: CMakeLists.txt  Kconfig
subsys/: CMakeLists.txt  Kconfig
subsys/ble/: CMakeLists.txt  Kconfig
subsys/bluetooth/: Kconfig
subsys/bm_installs/: CMakeLists.txt  Kconfig
subsys/fs/: CMakeLists.txt  Kconfig
subsys/logging/: Kconfig
subsys/nfc/: CMakeLists.txt  Kconfig
subsys/nrf_sdh/: Kconfig  irq_connect.c  irq_connect.h  irq_forward.s  nrf_sdh.c  nrf_sdh_ble.c  nrf_sdh_soc.c  sdh.ld
subsys/settings/: CMakeLists.txt  Kconfig
subsys/shell/: CMakeLists.txt  Kconfig
subsys/softdevice/: CMakeLists.txt  Kconfig  nvic.c  tables.c
subsys/softdevice_handler/: CMakeLists.txt  Kconfig  bm_sdh.c  bm_sdh_ble.c  bm_sdh_soc.c  irq_connect.c  irq_connect_bsim.c  irq_forward.s  nrf_sdh.c  nrf_sdh_ble.c  nrf_sdh_info.c  nrf_sdh_soc.c  rand_seed.c  sdh.ld  sdh_ram.ld
subsys/storage/: CMakeLists.txt  Kconfig
(+1700 files in other folders)
