#
# Copyright (c) 2025 Nordic Semiconductor ASA
#
# SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
#

cmake_minimum_required(VERSION 3.20.0)

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})

project(unit_test_ble_conn_params)

set(SOFTDEVICE_VARIANT "s115")
set(SOFTDEVICE_INCLUDE_DIR "${ZEPHYR_NRF_BM_MODULE_DIR}/components/softdevice/\
${SOFTDEVICE_VARIANT}/${SOFTDEVICE_VARIANT}_API/include")

cmock_handle(${SOFTDEVICE_INCLUDE_DIR}/ble_gatts.h)
cmock_handle(${SOFTDEVICE_INCLUDE_DIR}/ble_gattc.h)
cmock_handle(${SOFTDEVICE_INCLUDE_DIR}/ble_gap.h)
cmock_handle(${ZEPHYR_NRF_BM_MODULE_DIR}/include/bm/softdevice_handler/nrf_sdh_ble.h)

zephyr_linker_sources(SECTIONS evt_obs.ld)

target_compile_definitions(app PRIVATE
  SVCALL_AS_NORMAL_FUNCTION
  SUPPRESS_INLINE_IMPLEMENTATION
  NRF54L15_XXAA
  CONFIG_NRF_SDH_BLE_TOTAL_LINK_COUNT=64
  CONFIG_BLE_CONN_PARAMS_AUTO_GAP_CONN_PARAM_UPDATE=1
  CONFIG_BLE_CONN_PARAMS_MIN_CONN_INTERVAL=6
  CONFIG_BLE_CONN_PARAMS_MAX_CONN_INTERVAL=256
  CONFIG_BLE_CONN_PARAMS_PERIPHERAL_LATENCY=0
  CONFIG_BLE_CONN_PARAMS_SUP_TIMEOUT=100
  CONFIG_BLE_CONN_PARAMS_MAX_PERIPHERAL_LATENCY_DEVIATION=6
  CONFIG_BLE_CONN_PARAMS_MAX_SUP_TIMEOUT_DEVIATION=400
  CONFIG_BLE_CONN_PARAMS_NEGOTIATION_RETRIES=2
  CONFIG_BLE_CONN_PARAMS_DISCONNECT_ON_FAILURE=1
  CONFIG_BLE_CONN_PARAMS_AUTO_ATT_MTU=1
  CONFIG_BLE_CONN_PARAMS_ATT_MTU=23
  CONFIG_BLE_CONN_PARAMS_INITIATE_ATT_MTU_EXCHANGE=1
  CONFIG_BLE_CONN_PARAMS_AUTO_DATA_LENGTH=1
  CONFIG_BLE_CONN_PARAMS_DATA_LENGTH_TX=30
  CONFIG_BLE_CONN_PARAMS_DATA_LENGTH_RX=30
  CONFIG_BLE_CONN_PARAMS_INITIATE_DATA_LENGTH_UPDATE=1
  CONFIG_BLE_CONN_PARAMS_AUTO_PHY_UPDATE=1
  CONFIG_BLE_CONN_PARAMS_PHY_AUTO=1
  CONFIG_BLE_CONN_PARAMS_PHY=0x00
  CONFIG_BLE_CONN_PARAMS_INITIATE_PHY_UPDATE=1
  CONFIG_NRF_SDH_BLE_GAP_EVENT_LENGTH=3
)

# Generate and add test file
test_runner_generate(src/unity_test.c)
target_sources(app PRIVATE src/unity_test.c)

target_include_directories(app PRIVATE
  ${ZEPHYR_NRF_BM_MODULE_DIR}/include
  ${SOFTDEVICE_INCLUDE_DIR}
  ${ZEPHYR_HAL_NORDIC_MODULE_DIR}/nrfx/mdk
)

target_sources(app PRIVATE
  ${ZEPHYR_NRF_BM_MODULE_DIR}/lib/bluetooth/ble_conn_params/att_mtu.c
  ${ZEPHYR_NRF_BM_MODULE_DIR}/lib/bluetooth/ble_conn_params/conn_param.c
  ${ZEPHYR_NRF_BM_MODULE_DIR}/lib/bluetooth/ble_conn_params/data_length.c
  ${ZEPHYR_NRF_BM_MODULE_DIR}/lib/bluetooth/ble_conn_params/event.c
  ${ZEPHYR_NRF_BM_MODULE_DIR}/lib/bluetooth/ble_conn_params/phy_mode.c
)
